# sokoban-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TODO.md  langgraph.json  pyproject.toml
_workspace/codex-harness/code-reviewer/: 00_scope.md  01_correctness.md  02_security.md  03_performance.md  04_architecture_style.md  05_summary.md
_workspace/codex-harness/legacy-modernizer/: 00_input.md  01_legacy_analysis.md  02_refactoring_strategy.md  03_migration_plan.md  04_test_report.md  05_review_report.md
assets/levels/: boxoban_sample.txt
benchmarks/: README.md  agentic_heldout_v1.json  boxoban_pilot_v1.json  boxoban_research_v1.json
benchmarks/results/: boxoban_medium_smoke_v1.summary.json
docs/: AGENTIC_PLANNING.md  ARCHITECTURE.md  DEPENDENCIES.md  LIVE_VIEWER.md  PROJECT.md
levels/: README.md
levels/custom/: tiny-push.json  tiny-walk.json
notebooks/: agentic_generalization.ipynb  baseline_comparison.ipynb  langgraph_planner_comparison.ipynb  llm_agent_comparison.ipynb
scripts/: build_agentic_research_notebook.py  build_baseline_notebook.py  build_langgraph_comparison_notebook.py  build_level_catalog.py  build_llm_comparison_notebook.py  check_ollama.py  prepare_boxoban_pilot.py  prepare_boxoban_research.py  run_agentic_research.py  run_boxoban_pilot.py
src/sokoban_agent/: __init__.py  agentic_cli.py  play.py
src/sokoban_agent/agents/: __init__.py  base.py  bfs.py  llm.py  (+2 more)
tests/: test_agent_server_store.py  test_agentic_checkpoint_schema.py  test_agentic_cohort.py  test_agentic_evaluation.py  test_agentic_graph.py  test_agentic_memory.py  test_agentic_reflection.py  test_agents.py  test_baseline_artifact_rows.py  test_baseline_graph_state.py  test_board_analysis.py  test_evaluation.py  test_evaluation_schemas.py  test_level_catalog.py  test_levels.py  test_llm.py  test_llm_agent.py  test_llm_planner.py  test_local_execution.py  test_planning.py  test_play.py  test_research_experiment.py  test_sokoban_env.py  test_strategy.py  test_strategy_graph.py  test_strategy_runtime.py  test_studio.py
viewer/: index.html  package-lock.json  package.json  server.mjs  styles.css  tsconfig.json
viewer/app/: globals.css  layout.tsx  page.tsx
viewer/components/: board.tsx  inspector.tsx  live-viewer.tsx  run-form.tsx
viewer/lib/: board.ts  events.ts  frame-queue.ts  level-catalog-server.ts  levels.ts  stream.ts  types.ts
viewer/src/: app.js  board.js  events.js  queue.js  stream.js
viewer/test/: accessibility.test.mjs  accessibility.test.ts  board.test.mjs  board.test.ts  events.test.mjs  events.test.ts  levels.test.ts  queue.test.mjs  queue.test.ts  stream.test.mjs  stream.test.ts
(+116 files in other folders)
