[project]
name = "sokoban-agent"
version = "0.1.0"
description = "Research workspace for an AI agent that learns to play Sokoban."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "gymnasium>=1.0.0",
    "litellm>=1.83.3,<2.0.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
sokoban-play = "sokoban_agent.play:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "mypy>=1.11.0",
    "nbclient>=0.10.0",
    "nbformat>=5.10.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sokoban_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["sokoban_agent"]
mypy_path = "src"
